--- a/index (1).html
+++ b/index (1).html
@@ -6,7 +6,7 @@
 	<title>Caso estudio GIT</title>
 </head>
 
-<body style="background-color: red ;">
+<body style="background-color: blue ;">
 =======
 
 
